--- a/FrontEnd/price.html
+++ b/FrontEnd/price.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subscription Plans</title>
+    <link rel="icon" href="Assets/Icons/icons8-registry-editor-96.png" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
     <style>
-        body {
-            background:url(./Assets/images/bg-image.jpg);
-            color: white;
-            font-family: Arial, sans-serif;
-            height: 100vh;
+        main {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -18,9 +17,10 @@
         }
 
         .pricing-container {
-            max-width: 850px;
-            height: 450px;
-            padding: 20px;
+            max-width: 850px !important;
+            max-height: 600px !important;
+            
+            padding: 20px !important;
             background: black;
             border-radius: 10px;
         }
@@ -30,7 +30,7 @@
             color: black;
             border-radius: 20px;
             box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
-            padding: 30px;
+            padding: 30px !important;
             transition: transform 0.3s;
         }
 
@@ -59,66 +59,220 @@
 
         .back-home {
             position: absolute;
-            bottom: 20px;
-            right: 20px;
+            bottom: 18%;
+            right: 25%;
         }
     </style>
 </head>
+
 <body>
-    <div class="container pricing-container">
-        <h2 class="mb-5">Subscription</h2>
-        <div class="row g-4">
-            <!-- Monthly Plan -->
-            <div class="col-md-4">
-                <div class="card">
-                    <h4 class="card-title">Personal</h4>
-                    <h2>₹50<span class="fs-5">/mo</span></h2>
-                    <ul class="list-unstyled text-start">
-                        <li>• Unlimited Task Generate</li>
-                        <li>• AI Framed Questions</li>
-                        <li>• Multiple Language Support</li>
-                        <li>• Access beta version</li>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
+            <div class="logo"></div>
+            <a class="navbar-brand" href="Home.html">
+                <img src="Assets/images/Logo.svg" alt="Logo">
+            </a>
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="price.html">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Overview</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Services</a>
+                        </li>
                     </ul>
-                    <a href="#" class="btn btn-custom">Purchase</a>
+                </div>
+                <div class="dropdown dropleft">
+                    <button class="btn btn-primary bg-transparent border-0" type="button" id="dropdownMenuButton"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="Assets/Icons/menu.svg" alt="Menu">
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
+                            Progress <img src="Assets/Icons/caret-fill.svg" alt="Caret">
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">Solved
+                            <img src="Assets/Icons/caret-fill.svg" alt="Caret"></a>
+                    </div>
                 </div>
             </div>
-
-            <!-- Yearly Plan -->
-            <div class="col-md-4">
-                <div class="card">
-                    <h4 class="card-title">Personal</h4>
-                    <h2><span class="discounted-price">₹600</span> ₹500<span class="fs-5">/yr</span></h2>
-                    <ul class="list-unstyled text-start">
-                        <li>• Unlimited Task Generate</li>
-                        <li>• AI Framed Questions</li>
-                        <li>• Multiple Language Support</li>
-                        <li>• Access beta version</li>
-                    </ul>
-                    <a href="#" class="btn btn-custom">Purchase</a>
+        </nav>
+    </header>
+    <main>
+        <div class="container pricing-container">
+            <h2 class="mb-5" style="color: white;">Subscription</h2>
+            <div class="row g-4">
+                <!-- Monthly Plan -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <h4 class="card-title">Personal</h4>
+                        <h2>₹50<span class="fs-5">/mo</span></h2>
+                        <ul class="list-unstyled text-start">
+                            <li>• Unlimited Task Generate</li>
+                            <li>• AI Framed Questions</li>
+                            <li>• Multiple Language Support</li>
+                            <li>• Access beta version</li>
+                        </ul>
+                        <a href="#" class="btn btn-custom">Purchase</a>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Education Plan -->
-            <div class="col-md-4">
-                <div class="card">
-                    <h4 class="card-title">Education</h4>
-                    <h2>📞 Contact</h2>
-                    <ul class="list-unstyled text-start">
-                        <li>• Specific Tasks</li>
-                        <li>• Age based Q/A</li>
-                        <li>• Multiple language support</li>
-                    </ul>
-                    <a href="#" class="btn btn-custom">Purchase</a>
+                <!-- Yearly Plan -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <h4 class="card-title">Personal</h4>
+                        <h2><span class="discounted-price">₹600</span> ₹500<span class="fs-5">/yr</span></h2>
+                        <ul class="list-unstyled text-start">
+                            <li>• Unlimited Task Generate</li>
+                            <li>• AI Framed Questions</li>
+                            <li>• Multiple Language Support</li>
+                            <li>• Access beta version</li>
+                        </ul>
+                        <a href="#" class="btn btn-custom">Purchase</a>
+                    </div>
+                </div>
+
+                <!-- Education Plan -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <h4 class="card-title">Education</h4>
+                        <h2>📞 Contact</h2>
+                        <ul class="list-unstyled text-start">
+                            <li>• Specific Tasks</li>
+                            <li>• Age based Q/A</li>
+                            <li>• Multiple language support</li>
+                        </ul>
+                        <a href="#" class="btn btn-custom">Purchase</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Back Home Button -->
-    <div class="back-home">
-        <a href="Home.html" class="btn btn-light">Back Home</a>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"> </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"> </script>
+        <!-- Back Home Button -->
+        <div class="back-home">
+            <a href="Home.html" class="btn btn-light">Back Home</a>
+        </div>
+        <!-- Sidebar -->
+        <aside id="sidebar" class="bg-dark text-white d-flex flex-column"
+            style="height: 100vh;background-color: black !important;">
+            <div class="p-3">
+                <h5>Code Conversion</h5>
+                <ul class="nav flex-column">
+                    <!-- Top Section -->
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white" data-toggle="modal"
+                            data-target="#settingsModal">Settings</a>
+                    </li>
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Support</a></li>
+                    <div class="dropdown-divider"></div>
+                </ul>
+            </div>
+
+            <!-- Spacer to push the bottom content down -->
+            <div class="flex-grow-1"></div>
+
+            <div class="p-3">
+                <ul class="nav flex-column">
+                    <!-- Bottom Section -->
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Subscription</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Mohamed</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Sign out</a></li>
+                </ul>
+            </div>
+        </aside>
+
+        <!-- Sidebar Toggle Button -->
+        <button id="sidebarToggle" class="btn position-fixed text-white"
+            style="left: 10px; bottom: 20px; z-index: 1001; width: 50px; height: 50px;">
+            <img src="Assets/Icons/sidebar.svg" alt="Open" id="openIcon" style="display: block;">
+            <img src="Assets/Icons/sidebar.svg" alt="Close" id="closeIcon" style="display: none;">
+        </button>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        document.getElementById('sidebarToggle').addEventListener('click', function () {
+            const sidebar = document.getElementById('sidebar');
+            const openIcon = document.getElementById('openIcon');
+            const closeIcon = document.getElementById('closeIcon');
+            const main = document.querySelector('main');
+            const sidebarToggle = document.getElementById('sidebarToggle');
+
+            if (sidebar.style.left === '-250px' || sidebar.style.left === '') {
+                sidebar.style.left = '0';
+                main.style.marginLeft = '250px';
+                openIcon.style.display = 'none';
+                closeIcon.style.display = 'block';
+                sidebarToggle.style.left = '200px'; // Move the toggle button to the right of the sidebar
+                sidebarToggle.style.bottom = "10px";
+            } else {
+                sidebar.style.left = '-250px';
+                main.style.marginLeft = '0';
+                openIcon.style.display = 'block';
+                closeIcon.style.display = 'none';
+                sidebarToggle.style.left = '10px'; // Move the toggle button back to original position
+            }
+        });
+
+        // Ensure the close icon is hidden initially
+        document.getElementById('closeIcon').style.display = 'none';
+    </script>
+    <script>
+        // Fetch and include settings modal
+        fetch("settings.html")
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
+    <!-- Settings Modal -->
+    <script>
+        function showTab(event, tab) {
+            event.preventDefault();
+            const content = {
+                general: "<h6>Chat</h6><p>Show tokens usage in chat</p>",
+                profile: "<h6>Details</h6><p>Email</p><p>Phone</p>",
+                tokens: "<h6>Usage</h6><p>Available Token</p><p>Total Tokens</p>",
+                editor: "<h6>Edit</h6><p>Line warpping</p>",
+                sessions: "<h6>Active Logins</h6><p>location : chennai </p><p>Time : 2:29pm</p><p>Device : Chrome(windows)</p>"
+            };
+            document.getElementById("settingsContent").innerHTML = content[tab];
+
+            // Remove 'active' class from all nav links
+            document.querySelectorAll(".nav-link").forEach(link => link.classList.remove("active"));
+            event.target.classList.add("active");
+        }
+    </script>
+    <footer class="footer fixed-bottom">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-end py-3">
+                <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><img src="Assets/Icons/icons8-instagram.svg" alt="Instagram"></li>
+                    <li class="list-inline-item"><img src="Assets/Icons/x.svg" alt="X"></li>
+                    <li class="list-inline-item"><img src="Assets/Icons/git.svg" alt="GitHub"></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Terms of Service</a></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Privacy Policy</a></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Code Conversion</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
