--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -4,253 +4,174 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Form</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>Contact Us</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0; 
             padding: 0; 
             box-sizing: border-box; 
         }
-        main {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-        .container {
-            background: white;
-            display: flex;
-            align-items: center;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-            max-width: 800px;
-            margin-bottom: 20px;
-        }
-        .left {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-        }
-
-        .left img {
-            width: 150px;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .left img:hover {
-            transform: scale(1.1) rotate(7deg);
-        }
-
-        .tilt {
-            will-change: transform;
-        }
-
-        .right {
-            flex: 1;
+        body {
+            background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+            color: white;
             padding: 20px;
         }
-
-        .right h2 {
-            margin-bottom: 20px;
-            font-size: 22px;
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.2);
         }
-
-        .input-box {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            outline: none;
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 20px;
         }
-
-        .button {
-            width: 100%;
-            padding: 10px;
-            background: rgb(17, 4, 117);
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        .button:hover {
-            background: rgb(91, 64, 214);
-        }
-
-        .home-button {
-            padding: 10px 20px;
-            background: rgb(25, 4, 96);
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: 0.3s;
+        nav ul li a {
             text-decoration: none;
+            color: white;
+            font-size: 16px;
         }
+        .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 50px 100px;
+        }
+        .left {
+            max-width: 50%;
+        }
+        .left h1 {
+            font-size: 36px;
+        }
+        .left h1 span {
+            background: linear-gradient(to right, #ff416c, #833ab4);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .contact-info {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+        .contact-boxes {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+        }
+        .contact-box {
+            display: flex;
+            align-items: center;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 10px 15px;
+            border-radius: 8px;
+            width: 48%;
+        }
+        .contact-details {
+            display: flex;
+            justify-content: space-between;
+            gap: 50px;
+            margin-top: 20px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 8px;
+        }
+        .contact-section {
+            flex: 1;
+            text-align: left;
+        }
+        .right {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 30px;
+            border-radius: 10px;
+            width: 40%
 
-        .home-button:hover {
-            background: rgb(67, 2, 218);
+        }
+        .right h2 {
+            font-size: 24px;
+        }
+        .right p {
+            font-size: 14px;
+            color: #ddd;
+        }
+        .form-row {
+            display: flex;
+            gap: 10px;
+        }
+        .form-row input {
+            flex: 1;
+        }
+        .right input, .right textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 25px;
+            background: transparent;
+            border: 1px solid #ddd;
+            color: white;
+        }
+        .right textarea {
+            height: 100px;
+        }
+        .right button {
+            width: 100%;
+            background: #007bff;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 25px;
+            font-size: 16px;
         }
     </style>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
-            <div class="logo"></div>
-            <a class="navbar-brand" href="Home.html">
-                <img src="Assets/images/Logo.svg" alt="Logo">
-            </a>
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="price.html">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Overview</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Services</a>
-                        </li>
-                    </ul>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Overview</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Services</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <div class="left">
+            <h1>Get in Touch: <span>We're Here to Answer Your Questions</span></h1>
+            <div class="contact-info">
+                <div class="contact-boxes">
+                    <div class="contact-box"><i>📧</i> support@lorem.com</div>
+                    <div class="contact-box"><i>📞</i> +91-101023031</div>
                 </div>
-                <div class="dropdown dropleft">
-                    <button class="btn btn-primary bg-transparent border-0" type="button" id="dropdownMenuButton"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="Assets/Icons/menu.svg" alt="Menu">
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                            Progress <img src="Assets/Icons/caret-fill.svg" alt="Caret">
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">Solved
-                            <img src="Assets/Icons/caret-fill.svg" alt="Caret"></a>
+                <div class="contact-details">
+                    <div class="contact-section">
+                        <h4>Customer Support</h4>
+                        <p>Our support team is available around the clock to help you with any queries.</p>
+                    </div>
+                    <div class="contact-section">
+                        <h4>Feedback and Suggestions</h4>
+                        <p>We value your important feedback and are continuously working towards improving ourselves to help you better.</p>
                     </div>
                 </div>
             </div>
-        </nav>
-    </header>
-
-    <main>
-        <section class="container">
-            <div class="left contact100-pic js-tilt tilt" data-tilt>
-                <img src="./Assets/images/msg-contact.png" alt="Envelope Animation">
-            </div>
-            <div class="right">
-                <h2>Get in touch</h2>
-                <input type="text" class="input-box" placeholder="Name" style="color: black;">
-                <input type="email" class="input-box" placeholder="Email" style="color: black;">
-                <textarea class="input-box" placeholder="Message..."></textarea>
-                <button class="button">Send</button>
-            </div>
-        </section>
-        <a href="./Home.html" class="home-button">Back to Home</a>
-        <script>
-            $(document).ready(function(){
-                $('.js-tilt').tilt({
-                    scale: 1.1
-                });
-            });
-        </script>
-        <aside id="sidebar" class="bg-dark text-white d-flex flex-column" style="height: 100vh;">
-            <div class="p-3">
-                <h5>Code Conversion</h5>
-                <ul class="nav flex-column">
-                    <li class="nav-item"><a href="#" class="nav-link text-white">Settings</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white">Support</a></li>
-                    <div class="dropdown-divider"></div>
-                </ul>
-            </div>
-            <div class="flex-grow-1"></div>
-            <div class="p-3">
-                <ul class="nav flex-column">
-                    <li class="nav-item"><a href="#" class="nav-link text-white">Subscription</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white">Mohamed</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white">Sign out</a></li>
-                </ul>
-            </div>
-        </aside>
-
-        <button id="sidebarToggle" class="btn position-fixed text-white"
-            style="left: 10px; bottom: 20px; z-index: 1001; width: 50px; height: 50px;">
-            <img src="Assets/Icons/sidebar.svg" alt="Open" id="openIcon">
-            <img src="Assets/Icons/sidebar.svg" alt="Close" id="closeIcon" style="display: none;">
-        </button>
-    </main>
-
-    <footer class="footer fixed-bottom">
-        <div class="container-fluid">
-            <div class="d-flex justify-content-end py-3">
-                <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><img src="Assets/Icons/icons8-instagram.svg" alt="Instagram"></li>
-                    <li class="list-inline-item"><img src="Assets/Icons/x.svg" alt="X"></li>
-                    <li class="list-inline-item"><img src="Assets/Icons/git.svg" alt="GitHub"></li>
-                    <li class="list-inline-item"><a class="text-white" href="#">Terms of Service</a></li>
-                    <li class="list-inline-item"><a class="text-white" href="#">Privacy Policy</a></li>
-                    <li class="list-inline-item"><a class="text-white" href="#">Code Conversion</a></li>
-                </ul>
-            </div>
         </div>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        document.getElementById('sidebarToggle').addEventListener('click', function () {
-            const sidebar = document.getElementById('sidebar');
-            const openIcon = document.getElementById('openIcon');
-            const closeIcon = document.getElementById('closeIcon');
-            const main = document.querySelector('main');
-            const sidebarToggle = document.getElementById('sidebarToggle');
-
-            if (sidebar.style.left === '-250px' || sidebar.style.left === '') {
-                sidebar.style.left = '0';
-                main.style.marginLeft = '250px';
-                openIcon.style.display = 'none';
-                closeIcon.style.display = 'block';
-                sidebarToggle.style.left = '200px';
-                sidebarToggle.style.bottom = "10px";
-            } else {
-                sidebar.style.left = '-250px';
-                main.style.marginLeft = '0';
-                openIcon.style.display = 'block';
-                closeIcon.style.display = 'none';
-                sidebarToggle.style.left = '10px';
-            }
-        });
-
-        document.getElementById('closeIcon').style.display = 'none';
-    </script>
-    <script>
-        $(document).ready(function() {
-            $(".tilt").tilt();
-        });
-      
-      </script>
+        <div class="right">
+            <h2>Get in Touch</h2>
+            <p>You can reach us anytime</p>
+            <div class="form-row">
+                <input type="text" placeholder="First Name">
+                <input type="text" placeholder="Last Name">
+            </div>
+            <input type="email" placeholder="Email">
+            <input type="tel" placeholder="Phone no">
+            <textarea placeholder="Your Message"></textarea>
+            <button>Submit</button>
+        </div>
+    </div>
 </body>
 
 </html>
