--- a/FrontEnd/settings.html
+++ b/FrontEnd/settings.html
@@ -14,10 +14,55 @@
         font-weight: bold;
     }
 
+    /* Custom CSS for input boxes */
+    .form-control {
+        background-color: #2a2e3a;
+        color: white;
+        border: 1px solid #444;
+    }
+
+    .form-control:focus {
+        background-color: #2a2e3a;
+        color: white;
+        border-color: #007bff;
+        box-shadow: none;
+    }
+
+    /* Custom CSS for Save button alignment */
+    .save-button-container {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 20px;
+    }
+
+    /* Custom CSS for Tokens section */
+    .token-label {
+        margin-left: auto; /* Push the label to the right */
+        font-weight: bold;
+    }
+
+    .upgrade-button-container {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 20px;
+    }
+
+    /* Custom CSS for version label */
+    .version-label {
+        margin-left: auto; /* Push the label to the right */
+        font-weight: bold;
+        color: #28a745; /* Green for Premium, change to #dc3545 for Free */
+    }
+
+    /* Increase the height of the settings modal */
+    .settings-modal-dialog {
+        min-height: 800px; /* Adjust this value as needed */
+        height: 40%;
+    }
 </style>
 <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered"
-        style="max-width: 35%; width: auto; resize: both; overflow: auto;min-height: 600px;">
+    <div class="modal-dialog modal-dialog-centered settings-modal-dialog"
+        style="max-width: 35%; width: auto; resize: both; overflow: auto;">
         <div class="modal-content" style="background-color: rgba(29, 31, 39, 0.97); color: aliceblue; height: 100%;">
             <div class="modal-header" style="color: aliceblue;">
                 <h5 class="modal-title" id="settingsModalLabel">Settings <img src="Assets/Icons/icons8-settings.svg"
@@ -64,6 +109,57 @@
                                     <div class="form-check form-switch ms-auto">
                                         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                                         <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Profile Tab Content -->
+                            <div id="profile" style="display: none;">
+                                <h6>Profile Details</h6>
+                                <div class="mb-3">
+                                    <label for="emailInput" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="emailInput" placeholder="Enter your email" value="example@example.com">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="phoneInput" class="form-label">Phone</label>
+                                    <input type="tel" class="form-control" id="phoneInput" placeholder="Enter your phone number" value="+1234567890">
+                                </div>
+                                <!-- Save Button -->
+                                <div class="save-button-container">
+                                    <button type="button" class="btn btn-primary">Save</button>
+                                </div>
+                            </div>
+
+                            <!-- Tokens Tab Content -->
+                            <div id="tokens" style="display: none;">
+                                <h6>Token Usage</h6>
+                                <div class="d-flex align-items-center">
+                                    <p class="mb-0">Available Token</p>
+                                    <span class="token-label">100</span>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <p class="mb-0">Total Tokens</p>
+                                    <span class="token-label">500</span>
+                                </div>
+                                <!-- Current Version Label -->
+                                <div class="d-flex align-items-center">
+                                    <p class="mb-0">Current Version</p>
+                                    <span class="version-label">Free</span> <!-- Change to "Premium" if applicable -->
+                                </div>
+                                <!-- Upgrade to Premium Button -->
+                                <div class="upgrade-button-container">
+                                    <button type="button" class="btn btn-warning" onclick="upgradeToPremium()">Upgrade to Premium</button>
+                                </div>
+                            </div>
+
+                            <!-- Editor Tab Content -->
+                            <div id="editor" style="display: none;">
+                                <h6>Editor Settings</h6>
+                                <div class="d-flex align-items-center">
+                                    <p class="mb-0">Enable line wrapping</p>
+                                    <div class="form-check form-switch ms-auto">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="lineWrappingSwitch">
+                                        <label class="form-check-label" for="lineWrappingSwitch"></label>
                                     </div>
                                 </div>
                             </div>
